# nekoton-wasm

./: .gitignore  Cargo.toml  README.md  build.sh
src/: external.rs  generic_contract.rs  lib.rs  models.rs  tokens_object.rs  transactions_tree.rs  utils.rs
src/transport/: gql.rs  jrpc.rs  local.rs  mod.rs  proto.rs  proxy.rs  ton.rs
