[package]
name = "nekoton-wasm"
version = "1.3.3"
edition = "2021"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
repository = "https://github.com/broxus/nekoton-wasm"
description = "Nekoton bindings for WASM"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
incremental = false
codegen-units = 1
opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
getrandom = { version = "0.2", features = ["js"] }
gloo-utils = "0.1.5"
hex = "0.4"
js-sys = "0.3"
num-bigint = "0.4"
num-traits = "0.2"
rand = { version = "0.8", features = ["getrandom"] }
serde = "1.0"
sha2 = "0.9.9"
thiserror = "1.0"
tokio = { version = "1", features = ["sync"] }
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
zeroize = "1"
ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi.git" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git", features = ["venom"] }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
ton_executor = { git = "https://github.com/broxus/ton-labs-executor.git" }

[dependencies.nt]
package = "nekoton"
git = "https://github.com/everx-labs/broxus-nekoton.git"
branch = "master"
features = ["web", "gql_transport", "jrpc_transport", "proto_transport", "extended_models", "non_threadsafe"]

[patch.crates-io]
hmac-drbg = { git = "https://github.com/Rexagon/rust-hmac-drbg" }
